# limits-colimits

./: .gitignore  AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: colimit.rs  cone.rs  coproduct.rs  diagram.rs  lib.rs  limit.rs  product.rs
